# vault42

./: .dockerignore  .gitignore  .gitleaks.toml  Cargo.toml  DECISIONS.md  HUMAN-ATOMS.md  LICENSE  Makefile  README.md  RUNBOOK.md  SCOPE-KEYS.md  THREAT-MODEL.md  USERDOC.md  deny.toml  fly.contract.toml  fly.toml
.cargo/: audit.toml
.claude/: AGENTS.md
.claude/rules/: api-convention.md  comments.md  go-package-design.md  minimalism-ladder.md  minimalism-markers.md  no-globals.md  refactor-c.md  refactor-common.md  refactor-go.md  refactor-rust.md  refactor-shell.md  refactor-typescript.md
.github/workflows/: ci.yml
contracts/: README.md
contracts/authz/v1/: authz.proto
contracts/vault/v1/: vault.proto
crates/vault42-cli/: Cargo.toml
crates/vault42-cli/src/: address.rs  cli.rs  client.rs  compose.rs  contract_io.rs  decrypt.rs  derive.rs  keystore_io.rs  main.rs  passphrase.rs  verbs_audit.rs  verbs_init.rs  verbs_manage.rs  verbs_register.rs  verbs_secret.rs  verbs_share.rs
crates/vault42-conformance/: Cargo.toml
crates/vault42-conformance/src/: lib.rs
crates/vault42-conformance/tests/: edge_battery.rs  envelope_roundtrip.rs  properties.rs  smoke.rs
crates/vault42-contract/: Cargo.toml
crates/vault42-contract/src/: authority.rs  config.rs  main.rs  otp.rs  routes.rs  signing.rs  store.rs  validate.rs
crates/vault42-core/: Cargo.toml
crates/vault42-core/src/: aad.rs  aead.rs  contract.rs  envelope.rs  error.rs  identity.rs  inspect.rs  kdf.rs  keyset.rs  keyset_sig.rs  keystore.rs  lib.rs  metadata.rs  open.rs  recipient.rs  request.rs  seal.rs  sign.rs
crates/vault42-grobase/: Cargo.toml
crates/vault42-grobase/src/: audit.rs  client.rs  decide.rs  error.rs  lib.rs  serviceauth.rs  verify.rs
crates/vault42-proto/: Cargo.toml  build.rs
crates/vault42-proto/src/: lib.rs
crates/vault42-server/: Cargo.toml
crates/vault42-server/src/: audit_rpc.rs  audit_store.rs  authn.rs  config.rs  e2e.rs  env_store.rs  grobase_store.rs  grpc.rs  jwt.rs  main.rs  ops_env.rs  ops_read.rs  ops_rotate.rs  ops_scope.rs  ops_write.rs  principal.rs  scope_store.rs  secret_read.rs  secret_write.rs  store.rs  store_trait.rs  svc.rs
crates/vault42-ssh/: Cargo.toml
crates/vault42-ssh/src/: config.rs  factory.rs  handler.rs  lib.rs  main.rs  server.rs
deploy/: Dockerfile  Dockerfile.contract  GROBASE-STORE.md
integration/grobase/: 071_vault42_secrets.sql  README.md
scripts/ops/: gen-42-header.py
scripts/verify/: m71-grobase-substrate.sh  run-gate-battery.sh  v01-server-e2e.sh  v12-otp-login.sh
site/: index.html
