[package]
name = "vault42-cli"
description = "vault42 zero-knowledge CLI — all plaintext crypto happens here, locally"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "vault42"
path = "src/main.rs"

[dependencies]
vault42-core = { path = "../vault42-core" }
