[package]
name = "vault42-cli"
description = "vault42 zero-knowledge CLI — all plaintext crypto happens here, locally"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "vault42"
path = "src/main.rs"

[dependencies]
vault42-core = { path = "../vault42-core" }
vault42-proto = { path = "../vault42-proto" }
tokio.workspace = true
tonic = { workspace = true, features = ["tls", "tls-roots"] }
reqwest.workspace = true
clap.workspace = true
rpassword.workspace = true
dirs.workspace = true
anyhow.workspace = true
hex.workspace = true
base64.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
