[package]
name = "vault42-conformance"
description = "vault42 property + fuzz battery (security conformance — test-only)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vault42-core = { path = "../vault42-core" }
