[package]
name = "vault42-core"
description = "vault42 zero-knowledge crypto core (pure, no I/O)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
