[package]
name = "vault42-core"
description = "vault42 zero-knowledge crypto core (pure, no I/O)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
zeroize.workspace = true
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
base64 = "0.22"
