[package]
name = "vault42-grobase"
description = "vault42 → grobase REST client: X-Service-Auth HMAC signer + JSON helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
zeroize.workspace = true
