[package]
name = "vault42-server"
description = "vault42 public gRPC/HTTPS edge — a stateless orchestrator (never sees plaintext)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "vault42-server"
path = "src/main.rs"

[dependencies]
vault42-core = { path = "../vault42-core" }
