[package]
name = "vault42-server"
description = "vault42 public gRPC/HTTPS edge — a stateless orchestrator (never sees plaintext)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "vault42-server"
path = "src/main.rs"

[dependencies]
vault42-core = { path = "../vault42-core" }
vault42-proto = { path = "../vault42-proto" }
vault42-grobase = { path = "../vault42-grobase" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
uuid.workspace = true
hmac.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }
