[package]
name = "vault42-ssh"
description = "vault42 hardened SSH edge (russh) — transport-only auth, client-side reveal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "vault42-ssh"
path = "src/main.rs"

[dependencies]
russh.workspace = true
russh-keys.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
